--- a/my work.html
+++ b/my work.html
@@ -1,9 +1,21 @@
-<h1><b>MY   WORK </b> </h1>
-<h3>Project 1: Article on Moon</h3>
-<p>Have a look on my article</p>
-     <a href= "moon.html" target="_blank">  here </a> </p>
+ <!DOCTYPE html>
+ <html>
+    <head>
+        <title>Ishika's Html projects </title>
+    </head>
+    <body>
+        <h1><b>MY   WORK </b> </h1>
+        <h3>Project 1: Article on Moon</h3>
+        <p>Have a look on my article</p>
+            <a href= "moon.html" target="_blank">  CLICK HERE1` </a> </p>
 
- <br><br><br>
- <h3> Project 2: Google Home Page</h3>
- <p>I have built Google home page using html <br> Check out the live demo 
-    <a href="E:\googleClone\index.html" target="_blank">here</a></p>
+        <br><br><br>
+        <h3> Project 2: Google Home Page</h3>
+        <p>I have built Google home page using html <br> Check out the live demo 
+            <a href="E:\googleClone\index.html" target="_blank">here</a></p>
+
+        <br><br>
+        <h3>Project 3: My Personal Website</h3>
+        <p>It contain my inform.Check it <a href="E:\PersonalSide\personal.html" >here</a></p>   
+    </body> 
+</html>    
