--- a/my work.html
+++ b/my work.html
@@ -1,15 +1,18 @@
  <!DOCTYPE html>
  <html>
     <head>
+        <link rel="stylesheet" href="style.css"/>
         <title>Ishika's Html projects </title>
+        
     </head>
     <body>
         <h1><b>MY   WORK </b> </h1>
+        <br>
         <h3>Project 1: Article on Moon</h3>
         <p>Have a look on my article</p>
-            <a href= "moon.html" target="_blank">  CLICK HERE1` </a> </p>
+            <a href= "moon.html" target="_blank">  CLICK HERE </a> </p>
 
-        <br><br><br>
+        <br>
         <h3> Project 2: Google Home Page</h3>
         <p>I have built Google home page using html <br> Check out the live demo 
             <a href="E:\googleClone\index.html" target="_blank">here</a></p>
