--- a/my work.html
+++ b/my work.html
@@ -15,10 +15,10 @@
         <br>
         <h3> Project 2: Google Home Page</h3>
         <p>I have built Google home page using html <br> Check out the live demo 
-            <a href="E:\googleClone\index.html" target="_blank">here</a></p>
+            <a href="#" target="_blank">here</a></p>
 
         <br><br>
         <h3>Project 3: My Personal Website</h3>
-        <p>It contain my inform.Check it <a href="E:\PersonalSide\personal.html" >here</a></p>   
+        <p>It contain my inform.Check it <a href="#" >here</a></p>   
     </body> 
 </html>    
