--- a/moon.html
+++ b/moon.html
@@ -1,13 +1,17 @@
 <h1>MOON: Everything</h1>
-<img src="moon.jpg" width ="100%" >
+<img src="./image/moon.jpg" width="50%">
 <h3> EARTH' s Satellite </h3>
-<p> Moon, Earth"s sole natural satellite and nearest large celestial body.Known since prehistoric times,it is the brightest object in the sky after the Sun. It is designated by the symbol. Its name in English,like that of Earth , is of Germanic and old English derivation.</p>
-<img src="moon1.jpg"  >
-<div  >
-    <h3> To access more information  </h3>
+<p> Moon, Earth"s sole natural satellite and nearest large celestial body.Known since prehistoric times,it is the
+    brightest object in the sky after the Sun. It is designated by the symbol. Its name in English,like that of Earth ,
+    is of Germanic and old English derivation.</p>
+<img src="./image/moon1.jpg">
+<div>
+    <h3> To access more information </h3>
     <input type="text" placeholder="Enter username">
-    <input type="password" placeholder ="Enter password">
-    <button>  <center>Sign up    </center> </button>
+    <input type="password" placeholder="Enter password">
+    <button>
+        <center>Sign up </center>
+    </button>
 
     <br>
     <br>
@@ -15,8 +19,4 @@
 
     <!--<button>Choose File </button>No file choosen-->
     <input type="file">
-
-
-
-
 </div>
