--- a/my work.html
+++ b/my work.html
@@ -1,24 +1,28 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
  <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css"/>
         <title>Ishika's Html projects </title>
-        
     </head>
     <body>
         <h1><b>MY   WORK </b> </h1>
         <br>
         <h3>Project 1: Article on Moon</h3>
         <p>Have a look on my article</p>
-            <a href= "moon.html" target="_blank">  CLICK HERE </a> </p>
-
+            <a href= "moon.html" target="_blank">  CLICK HERE </a> 
+        </p>
+        
         <br>
         <h3> Project 2: Google Home Page</h3>
         <p>I have built Google home page using html <br> Check out the live demo 
-            <a href="#" target="_blank">here</a></p>
+            <a href="#" target="_blank">here</a>
+        </p>
 
         <br><br>
         <h3>Project 3: My Personal Website</h3>
         <p>It contain my inform.Check it <a href="#" >here</a></p>   
     </body> 
-</html>    
+</html>
