--- a/my work.html
+++ b/my work.html
@@ -8,21 +8,21 @@
         <title>Ishika's Html projects </title>
     </head>
     <body>
-        <h1><b>MY   WORK </b> </h1>
-        <br>
+        <h1><b>MY WORK </b> </h1>
         <h3>Project 1: Article on Moon</h3>
-        <p>Have a look on my article</p>
+        <p>Have a look on my article
             <a href= "moon.html" target="_blank">  CLICK HERE </a> 
         </p>
-        
-        <br>
-        <h3> Project 2: Google Home Page</h3>
-        <p>I have built Google home page using html <br> Check out the live demo 
-            <a href="#" target="_blank">here</a>
+
+        <hr>
+        <h3> Project 2: Google Home Page UI</h3>
+        <p>I have built Google home page using html <br> Checkout live demo 
+            <a href="./googleClone/index.html" target="_blank">here</a>
         </p>
 
-        <br><br>
+        <hr>
         <h3>Project 3: My Personal Website</h3>
-        <p>It contain my inform.Check it <a href="#" >here</a></p>   
+        <p>It contain my inform.Check it <a href="personal.html" >here</a>
+        </p>   
     </body> 
 </html>
