google home page site added

--- a/my work.html
+++ b/my work.html
@@ -17,7 +17,7 @@
         <hr>
         <h3> Project 2: Google Home Page UI</h3>
         <p>I have built Google home page using html <br> Checkout live demo 
-            <a href="./googleClone/index.html" target="_blank">here</a>
+            <a href="https://google-home-page-snowy.vercel.app/" target="_blank">here</a>
         </p>
 
         <hr>
