--- a/moon.html
+++ b/moon.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h2> <a href="./my work.html ">HOME PAGE</a></h2>
+        <h2> <a href="./index.html ">HOME PAGE</a></h2>
     </header>
     <h1>MOON: Everything</h1>
 <img src="./image/moon.jpg" width="40%"/>
