--- a/personal.html
+++ b/personal.html
@@ -11,14 +11,22 @@
 <body>
 <br><h1>Hi, My name is Ishika Goyal</h1>
 <br><h2>Information about me:</h2>
-<ol>
-    <li>Engineering Student</li>
-    <li>Skills: C++, SQL, OOPs, HTML</li>
-    <li>college: <a href = http://www.banasthali.org/banasthali/wcms/en/home/ target="_blank"> Banasthali Vidypith</a></li>
-</ol>
+
+    Engineering Student<br>
+    Skills: C++, SQL, OOPs, HTML<br>
+  college: <a href = http://www.banasthali.org/banasthali/wcms/en/home/ target="_blank"> Banasthali Vidypith</a>
+
 <center>
-<p>Contact with me<br><a href="https://www.linkedin.com/in/ishika-goyal-375112221/" >linkedin</a>
-<a href="https://github.com/ishikagoyal02" target="_parent">Github</a> </p>
+    
+<br><b>Contact with me</b><br>
+<div class="bye">
+    <div class="item"> 
+   <a href="https://www.linkedin.com/in/ishika-goyal-375112221/" >linkedin</a>
+</div>
+<div class="item">
+<a href="https://github.com/ishikagoyal02" target="_parent">Github</a> 
+</div>
+</div>
 </center>
 <br>
 <input type="text" placeholder="enter email">
