make the web more attractive through css

--- a/moon.html
+++ b/moon.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
     <title>MOON</title>
 </head>
+
 <body>
-    <header>
-        <h2> <a href="./index.html ">HOME PAGE</a></h2>
-    </header>
-    <h1>MOON: Everything</h1>
-<img src="./image/moon.jpg" width="40%"/>
-<h3> EARTH' s Satellite </h3>
-<p> 
-    Moon, Earth"s sole natural satellite and nearest large celestial body.Known since prehistoric times,it is the
-    brightest object in the sky after the Sun. It is designated by the symbol. Its name in English,like that of Earth ,
-    is of Germanic and old English derivation.
-</p>
-<img src="./image/moon1.jpg"/>
-<div>
-    <h3> To access more information </h3>
-    <input type="text" placeholder="Enter username">
-    <input type="password" placeholder="Enter password">
-    <button>
-        <center>Sign up </center>
-    </button>
+    <div class="m">
+        <div class="space">
+        <header>
+            <h2> <a href="./index.html ">HOME PAGE</a></h2>
+        </header>
+        <h1>MOON: Everything</h1>
+        <img src="./image/moon.jpg" width="40%" />
+        <h3> EARTH' s Satellite </h3>
+        <p>
+            Moon, Earth"s sole natural satellite and nearest large celestial body.Known since prehistoric times,it is
+            the
+            brightest object in the sky after the Sun. It is designated by the symbol. Its name in English,like that of
+            Earth ,
+            is of Germanic and old English derivation.
+        </p>
+        <img src="./image/moon1.jpg" />
+        <div>
+            <h3> To access more information </h3>
+            <input type="text" placeholder="Enter username">
+            <input type="password" placeholder="Enter password">
+            <button>
+                <center>Sign up </center>
+            </button>
 
-    <br>
-    <br>
-    <br>
+            <br>
+            <br>
+            <br>
 
-    <!--<button>Choose File </button>No file choosen-->
-    <input type="file">
-</div>
+            <!--<button>Choose File </button>No file choosen-->
+            <input type="file">
+        </div>
+    </div>
+    </div>
 </body>
+
 </html>
