Business card folder added , use gif as background image,use text shadows,change some text fonts and some other styling changes

--- a/moon.html
+++ b/moon.html
@@ -15,7 +15,7 @@
         <header>
             <h2> <a href="./index.html ">HOME PAGE</a></h2>
         </header>
-        <h1>MOON: Everything</h1>
+        <h1 style="color: #0ea2c8;">MOON: Everything</h1>
         <img src="./image/moon.jpg" width="40%" />
         <h3> EARTH' s Satellite </h3>
         <p>
@@ -25,7 +25,9 @@
             Earth ,
             is of Germanic and old English derivation.
         </p>
-        <img src="./image/moon1.jpg" />
+        </div>
+
+        <!--<img src="./image/moon1.jpg" />
         <div>
             <h3> To access more information </h3>
             <input type="text" placeholder="Enter username">
@@ -38,11 +40,14 @@
             <br>
             <br>
 
-            <!--<button>Choose File </button>No file choosen-->
+            
             <input type="file">
+        </div>-->
+        <div>
+            <h2 style="color:#0ea2c8 ; text-align: center; font-family: 'Orbitron',sans-serif;"> TERMS AND CONDITIONS </h2>
         </div>
     </div>
-    </div>
+
 </body>
 
 </html>
