--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 
 <body>
     <div class="main">
-        
-            <h1><b> <space ="work">MY WORK </space></b> </h1>
+
+        <header>
+            <h1 class="work"><b> MY WORK </b> </h1>
+        </header>
+            
             <div class="box">
             <h3><span class="cta">Project 1: Article on Moon </span> </h3>
             <p>Have a look on my article
