new project added

--- a/personal.html
+++ b/personal.html
@@ -1,35 +1,41 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"/>
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css" />
+  <title>Document</title>
 </head>
+
 <body>
-<br><h1>Hi, My name is Ishika Goyal</h1>
-<br><h2>Information about me:</h2>
+  <div class="personal">
+    <br>
+    <h1>Hi, My name is Ishika Goyal</h1>
+    <br>
+    <h2 <span id="line">Information about me:</span></h2>
 
     Engineering Student<br>
     Skills: C++, SQL, OOPs, HTML<br>
-  college: <a href = http://www.banasthali.org/banasthali/wcms/en/home/ target="_blank"> Banasthali Vidypith</a>
+    College: <a href=http://www.banasthali.org/banasthali/wcms/en/home/ target="_blank"> Banasthali Vidypith</a>
 
-<center>
-    
-<br><b>Contact with me</b><br>
-<div class="bye">
-    <div class="item"> 
-   <a href="https://www.linkedin.com/in/ishika-goyal-375112221/" >linkedin</a>
-</div>
-<div class="item">
-<a href="https://github.com/ishikagoyal02" target="_parent">Github</a> 
-</div>
-</div>
-</center>
-<br>
-<input type="text" placeholder="enter email">
-<button>Join Newsletter</button>
+
+
+    <br><b>Contact with me</b><br>
+    <div class="bye">
+      <div class="item">
+        <a href="https://www.linkedin.com/in/ishika-goyal-375112221/">linkedin</a>
+      </div>
+      <div class="item">
+        <a href="https://github.com/ishikagoyal02" target="_parent">Github</a>
+      </div>
+    </div>
+
+    <br>
+                        <!-- <input type="text" placeholder="enter email">
+                        <button>Join Newsletter</button> -->
+  </div>
 </body>
+
 </html>
