Birthday wish site added as new project

--- a/birthday.html
+++ b/birthday.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css";
-    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css" ; <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
     <div class="bday">
-        <h1 style="font-family: 'Orbitron', sans-serif; color: white;">Today is  Nick's birthday🎉</h1>
+        <h1 class="hiii">Today is Nick's birthday🎉</h1>
         <img id="bf-img" src="E:\newChapter\image\baby.jpg">
-        <h2>1 year old</h2>
-        <h4>01.06.2022</h4>
+        <h2 id="birth-age">1 year old</h2>
+        <h4 id="birth-date">01.06.2022</h4>
+
+        <div class="gift-section">
+            <h1 class="gift-title" class="hiii">Here's how happy I am for you Today🥳</h1>
+            <h3 class="gift-hint">(Hover over the gift)</h3>
+            <div class="gift-img" id="gift-img-happy"></div> 
+        </div>
+
+        <div class="gift-section">
+            <h1 class="gift-title" class="hiii">How people react when you enter the room😍</h1>
+            <div class="gift-img" id="gift-img-hot" ></div> 
+        </div>
+
+        <div class="gift-section">
+            <h1 class="gift-title" class="hiii">If I had to describe you with one word👇👇</h1>
+            <div class="gift-img" id="gift-img-genius" ></div> 
+        </div>
+
+        <div class="gift-section">
+            <h1 class="gift-title" class="hiii">The only person as badass as you💪</h1>
+            <div class="gift-img" id="gift-img-badass" ></div> 
+        </div>
+
+        <div class="gift-section">
+            <h1 class="gift-title" class="hiii">The one's for you, my friend</h1>
+            <div class="gift-img" id="gift-img-cheer" ></div> 
+        </div>
+        
     </div>
 </body>
+
 </html>
