--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
                 <a href="https://6470f6acd82a800e1f3eebd6--soft-rugelach-bf422e.netlify.app/"> CLICK HERE</a>
             </p>
         </div>
+
+        <div class="box">
+            <h3><span class="cta">Project 5: Digital BirthDay Wish </span></h3>
+            <p>
+                <a href="birthday.html"> CLICK HERE</a>
+            </p>
+        </div>
     </div>
 </body>
 
