make baby pic avaliable

--- a/birthday.html
+++ b/birthday.html
@@ -15,7 +15,7 @@
 
     <div class="bday">
         <h1 class="hiii">Today is Nick's birthday🎉</h1>
-        <img id="bf-img" src="E:\newChapter\image\baby.jpg">
+        <img id="bf-img" src="./image/baby.jpg">
         <h2 id="birth-age">1 year old</h2>
         <h4 id="birth-date">01.06.2022</h4>
 
